# Philement

./: .ggignore  .gitattributes  .gitignore  0.1634275  007-nitrogen  012-magnesium  :  CHANGES_SUMMARY.md  FINAL_CHANGES_SUMMARY.md  FINAL_SUMMARY.md  FIXES_SUMMARY.md  FIX_FINAL.md  FIX_SUMMARY.md  FIX_VERIFICATION.md  IMPLEMENTATION_COMPLETE.md  LICENSE.md  OSB_FIXES_SUMMARY.md  README.md  RELEASES.md  TAB_COLOR_FIX.md  debug_logging.js  inspect_columns.js  null  test.terminal  test_selection_fixes.js  verify_fixes.js
.kilocode/: mcp.json  (+1 more)
elements/001-hydrogen/hydrogen/cmake/: .CMakeLists.txt.swp  CMAKE_BUILD.md  CMAKE_COMPLETION_SUMMARY.md  CMakeCache.txt  CMakeLists-base.cmake  CMakeLists-cache.cmake  CMakeLists-coverage.cmake  CMakeLists-debug.cmake  CMakeLists-examples.cmake  CMakeLists-init.cmake  CMakeLists-ninja.cmake  CMakeLists-output.cmake  CMakeLists-package.cmake  CMakeLists-perf.cmake  CMakeLists-regular.cmake  CMakeLists-release.cmake  CMakeLists-targets.cmake  CMakeLists-unity-test.cmake  CMakeLists-unity.cmake  CMakeLists-valgrind.cmake  CMakeLists-version.cmake  CMakeLists.txt  CMakePresets.json  CPackConfig.cmake  CPackSourceConfig.cmake  CTestTestfile.cmake  MIGRATION_GUIDE.md  Makefile  README.md  cmake_all.txt  cmake_install.cmake  compare_builds.sh
elements/001-hydrogen/hydrogen/cmake/Testing/Temporary/: CTestCostData.txt
elements/001-hydrogen/hydrogen/cmake/scripts/: apply_upx.sh  check_version.sh  embed_payload.sh  trial_build.sh
elements/001-hydrogen/hydrogen/extras/brotli_udf_db2/: CMakeLists.txt  Makefile  README.md  brotli_decompress.c  install_brotli_decompress.clp
elements/001-hydrogen/hydrogen/extras/mailval/: CMakeLists.txt  capture.c  capture.h  gen_cert.sh  listener.c  listener.h  mailval.c  mailval.h  mailval.key  mailval.pem  proto_imap.c  proto_jmap.c  proto_smtp.c  store.c  store.h  tls.c  tls.h  util.c  util.h
elements/001-hydrogen/hydrogen/tests/unity/: CMakeLists.txt  README.md  test_basic_math.c  test_string_utils.c  test_system_info.c  unity_config.h
elements/001-hydrogen/hydrogen/tests/unity/mocks/: README.md  mock_api_utils.c  mock_api_utils.h  mock_auth_chat_deps.c  mock_auth_chat_deps.h  mock_auth_service_jwt.c  mock_auth_service_jwt.h  mock_chat_engine_cache.c  mock_chat_engine_cache.h  mock_chat_proxy.c  mock_chat_proxy.h  mock_chat_storage.c  mock_chat_storage.h  mock_conduit_helpers.c  mock_conduit_helpers.h  mock_crypto.c  mock_crypto.h  mock_database_engine.c  mock_database_engine.h  mock_database_migrations.c  mock_database_migrations.h  mock_db2_transaction.c  mock_db2_transaction.h  mock_dbqueue.c  mock_dbqueue.h  mock_generate_query_id.c  mock_generate_query_id.h  mock_info.c  mock_info.h  mock_landing.c  mock_landing.h  mock_launch.c  mock_launch.h  mock_libdb2.c  mock_libdb2.h  mock_libmicrohttpd.c  mock_libmicrohttpd.h  mock_libmysqlclient.c  mock_libmysqlclient.h  mock_libpq.c  (+23 more)
elements/001-hydrogen/hydrogen/tests/unity/src/: globals_test.c.backup.20251011_014411  globals_test.c.backup.20251011_014547  hydrogen_test.c  hydrogen_test.c.backup.20251011_014548  test_hydrogen.c
elements/001-hydrogen/hydrogen/tests/unity/src/api/: api_service_test_cleanup_api_endpoints.c  api_service_test_cleanup_api_endpoints.c.backup.20251011_014548  api_service_test_exact_endpoints.c  api_service_test_init_endpoints.c  api_service_test_init_endpoints.c.backup.20251011_014548  api_service_test_is_api_endpoint.c  api_service_test_is_api_request.c  api_service_test_register_api_endpoints.c  api_utils_test_buffer_post_data.c  api_utils_test_create_jwt.c  api_utils_test_error_cleanup.c  api_utils_test_extract_jwt_claims.c  api_utils_test_get_client_ip.c  api_utils_test_get_client_ip.c.backup.20251011_014548  api_utils_test_iterator_functions.c  api_utils_test_json_response.c  api_utils_test_parse_json_body.c  api_utils_test_url_decode.c  api_utils_test_url_encode.c  api_utils_test_url_encode.c.backup.20251011_014548  api_utils_test_validate_jwt.c  api_utils_test_validate_jwt.c.backup.20251011_014548  auth_service_test_base64url.c  auth_service_test_validate_login_input.c
elements/001-hydrogen/hydrogen/tests/unity/src/chat/: chat_context_hashing_test.c  chat_engine_cache_test.c  chat_lru_cache_test.c  chat_phase10_test.c  chat_provider_test.c  chat_storage_test.c
elements/001-hydrogen/hydrogen/tests/unity/src/config/: config_api_test_load_api_config.c  config_databases_test_load_database_config.c  config_defaults_test_initialize_config_defaults.c  config_files_test_is_file_readable.c  config_files_test_is_file_readable.c.backup.20251011_014551  config_logging_test_load_logging_config.c  config_mail_relay_test_load_mailrelay_config.c  config_mail_relay_test_load_mailrelay_config.c.backup.20251011_014551  config_mdns_client_test_load_mdns_client_config.c  config_mdns_server_test_load_mdns_server_config.c  config_mdns_server_test_load_mdns_server_config.c.backup.20251011_014551  config_network_test_load_network_config.c  config_network_test_load_network_config.c.backup.20251011_014551  config_notify_test_load_notify_config.c  config_oidc_rp_test_load_oidc_rp_config.c  config_oidc_test_load_oidc_config.c  config_oidc_test_load_oidc_config.c.backup.20251011_014551  config_print_test_load_print_config.c  config_print_test_load_print_config.c.backup.20251011_014551  config_resources_test_load_resources_config.c  config_scripting_test_cleanup_dump.c  config_server_test_load_server_config.c  config_server_test_load_server_config.c.backup.20251011_014551  config_swagger_test_load_swagger_config.c  config_terminal_test_load_terminal_config.c  config_terminal_test_load_terminal_config.c.backup.20251011_014551  config_test_load_config.c  config_test_load_config.c.backup.20251011_014551  config_utils_test_process_config_value.c  config_utils_test_process_env_variable_string.c  config_utils_test_process_env_variable_string.c.backup.20251011_014551  config_webserver_test_chacha.c  config_webserver_test_load_webserver_config.c  config_webserver_test_load_webserver_config.c.backup.20251011_014551  config_websocket_test_load_websocket_config.c
(+7489 files in other folders)
